portlets/proposals-portlet/src/main/webapp/css/simulation-both.css
.simulation{
    vertical-align: top;
    
}

table.simulation {
    width:100%;
}

.simulation td.outputs {
	padding-left: 20px;
}

.simulation td.inputs,
.simulation td.outputs {
    width:50%;
	vertical-align: top;
}

table.simulation .leftContent, table.simulation .right-content {
    width:100%;
}

.left-content {
    margin-right: 15px;
}

.runSimBtn {
    background-color:transparent;
    background-image:url("/climatecolab-theme/images/runModel_btn.gif");
    background-position:0 0;
    background-repeat:no-repeat;
    height:49px;
    width:211px;
    border: 0;
    float: left;
}

.saveSimBtn {
    background:url("/climatecolab-theme/images/saveChange_btn.gif") no-repeat scroll 0 0 transparent;
    height:45px;
    margin-top:4px;
    width:106px;
    float: left;
}

.cancelSimBtn {
    background:url("/climatecolab-theme/images/tabAciont_cancel_btn.png") no-repeat scroll 0 0 transparent;
    height:45px;
    margin-top:4px;
    float: left;
    width:106px;
}

.editSimBtn {
    background:url("/climatecolab-theme/images/edit_btn.gif") no-repeat scroll 0 0 transparent;
    margin-top:4px;
    height:45px;
    width:208px;
}

.simButtons {
    margin: auto;
    white-space: nowrap;
    
}


.simulation .popup-info-box {
    position: absolute;
    font-size: 12px;
}

.model_name_description {
	position: relative;
}

a.model_name_description{
    display: block;
    width: 50%;
}
.model_description .brand {
    cursor:pointer;
}

.model_description .brand.EnROADS {
	background: url(../img/climate_interactive_logo.png) no-repeat !important;
	width: 150px;
	height: 67px;
	float: right;
	margin-top: -50px;
}

.model_description .brand.EMF27, .model_description .brand.EMF  {
	background: url(../img/emf_logo.png) no-repeat !important;
	width: 154px;
	height: 50px;
	float: right;
	position: absolute;
	right: 0px;
	top: 0px;
}

